objects/ExternalPropertiesCatalogType__c.object
<CustomObject>
    <fields>
        <fullName>FunctionalKey__c</fullName>
        <description>unique key</description>
        <externalId>true</externalId>
        <label>FunctionalKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PropertiesAndCatalogRecordType__c</fullName>
        <label>Properties And Catalog RecordType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>External Properties</fullName>
                    <default>true</default>
                    <label>External Properties</label>
                </value>
                <value>
                    <fullName>External Activities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublishingStatus__c</fullName>
        <description>Field used by PrePublishing to determine which records to be synchronized</description>
        <label>Publishing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Publication</fullName>
                </value>
                <value>
                    <fullName>Awaiting Publication</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Name of the external Source system sending activities to PRM</description>
        <inlineHelpText>ex: UIMS, MEA, LMS-CSOD, ...</inlineHelpText>
        <label>Name of Source</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfActivity__c</fullName>
        <label>Type of Activity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfSource__c</fullName>
        <description>Type of external systems sending activities to PRM</description>
        <inlineHelpText>ex: Mobile App, Learning Management System, ...</inlineHelpText>
        <label>Type of Source</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>ex: Login, Test, Curriculum, ...</inlineHelpText>
        <label>Type of Activity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>External Systems Type</label>
    <listViews>
        <fullName>All_External_Systems</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>FunctionalKey__c</columns>
        <columns>TypeOfSource__c</columns>
        <columns>Source__c</columns>
        <columns>PropertiesAndCatalogRecordType__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>TypeOfActivity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All External Systems</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EPT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Systems Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>UpdateNotAllowed</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp; (ISCHANGED( Type__c ) || ISCHANGED( Source__c ))</errorConditionFormula>
        <errorMessage>Update is not allowed (references can be impacted). It is recommended to delete and recreate another Type</errorMessage>
    </validationRules>
</CustomObject>